--- a/resume.tex
+++ b/resume.tex
@@ -1,72 +1,73 @@
 %Copyright 2013 Stephen Kraemer
 
-% LaTeX resume using res.cls
-\documentclass[line]{res}
+\documentclass{letter}
 
 \usepackage[colorlinks=true, urlcolor=blue]{hyperref}
 \usepackage{grffile}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font
-\setlength{\textwidth}{5.1in} % set width of text portion
+%\setlength{\textwidth}{5.1in} % set width of text portion
 
 \begin{document}
 
-\name{Stephen Kraemer}
-\address{\begin{tabular}{r}
-    \href{https://github.com/straemer}{github.com/straemer} \\
-    (226) 606-4052 \\
-    \href{mailto:sbkraeme@uwaterloo.ca}{sbkraeme@uwaterloo.ca}
-    \end{tabular}
-}
+{\Huge\bf Stephen Kraemer} \hfill
+\begin{tabular}{r}
+\href{https://github.com/straemer}{github.com/straemer} \\
+\hfill (226) 606-4052 \\
+\hfill \href{mailto:sbkraeme@uwaterloo.ca}{sbkraeme@uwaterloo.ca}
+\end{tabular}
+\vskip 2pt
+\hrule
 
-\begin{resume}
+{\large\bf SKILLS SUMMARY} \\
+\begin{minipage}{0.35\textwidth}
+\includegraphics{programming_languages.eps}
+\end{minipage}
+\begin{minipage}{0.65\textwidth}
+\begin{itemize}
+\item Expert GNU/Linux user
+\item Skilled in multi-threaded programming
+\item Version Control: git, svn, perforce
+\end{itemize}
+\end{minipage}
 
-\section{PROGRAMMING LANGUAGES}
-        \includegraphics{programming_languages.eps}
-        %% \begin{itemize}
-        %% \item Proficient C++(11) programmer. Familiar with C, python, and Java.
-        %% \item Expert GNU/Linux user through home, work, and school use.
-        %% \item Experience using various C++ toolkits, including STL, boost, and Qt.
-        %% \item Skilled in multi-threaded programming.
-        %% \item Familiar with git, svn, and perforce version control systems.
-        %% \end{itemize}
 
-\section{WORK EXPERIENCE}
-        {\bf Software Developer} \hfill Apr-Aug 2013 \\
-        {\sl Oracle, Endeca Server Team, Boston, MA} \\
-        \begin{itemize}
-        \item Worked on performance and scaling team for an analytical database.
-        \item Personal projects were cache improvements, and job cancellation.
-        \item Coded in C++11, using gdb, valgrind, svn, and git.
-        \item Found and fixed a bug in cache eviction algorithm; increasing query performance by up to 10\%.
-        \item Worked in performance-sensitive code, such as the main thread scheduler.
-        \end{itemize}
+{\large\bf WORK EXPERIENCE} \\
+{\bf Software Developer} \hfill Apr-Aug 2013 \\
+{\sl Oracle, Endeca Server Team, Boston, MA}
+\begin{itemize}
+\item Worked on performance and scaling team for an analytical database.
+\item Personal projects were cache improvements, and job cancellation.
+\item Coded in C++11, using gdb, valgrind, svn, and git.
+\item Found and fixed a bug in cache eviction algorithm; increasing query performance by up to 10\%.
+\item Worked in performance-sensitive code, such as the main thread scheduler.
+\end{itemize}
 
-        {\bf Software Developer} \hfill Aug-Dec 2012 \\
-        {\sl Autodesk, Alias Team, Toronto, ON} \\
-        \begin{itemize}
-        \item Completely redesigned the printing workflow.
-        \item Coded in C++, using the Qt toolkit, and perforce.
-        \item Fixed bugs and added features in newly added modelling tools.
-        \end{itemize}
+{\bf Software Developer} \hfill Aug-Dec 2012 \\
+{\sl Autodesk, Alias Team, Toronto, ON}
+\begin{itemize}
+\item Completely redesigned the printing workflow.
+\item Coded in C++, using the Qt toolkit, and perforce.
+\item Fixed bugs and added features in newly added modelling tools.
+\end{itemize}
 
-        {\bf Design Engineer} \hfill Jan-Apr 2012 \\
-        {\sl Avvasi Inc, Packet Processing Team, Waterloo, ON} \\
-        \begin{itemize}
-        \item Worked on porting Internet Protocol parsers from an older product to a newer one.
-        \item Coded in C++11, using gdb and svn.
-        \item Gained knowledge of RTSP, RTMP, and HTTP protocols.
-        \end{itemize}
+{\bf Design Engineer} \hfill Jan-Apr 2012 \\
+{\sl Avvasi Inc, Packet Processing Team, Waterloo, ON}
+\begin{itemize}
+\item Worked on porting Internet Protocol parsers from an older product to a newer one.
+\item Coded in C++11, using gdb and svn.
+\item Gained knowledge of RTSP, RTMP, and HTTP protocols.
+\end{itemize}
 
-\section{EDUCATION}
-        {\bf Candidate for Bachelor of Applied Science} \hfill University of Waterloo, ON \\
-        Mechatronics Engineering \hfill Sept 2009 - Apr 2014
+{\large\bf EDUCATION} \\
+{\bf Candidate for Bachelor of Applied Science} \hfill University of Waterloo, ON \\
+Mechatronics Engineering \hfill Sept 2009 - Apr 2014
 
-\section{FOURTH YEAR DESIGN PROJECT}
-        \begin{itemize}
-        \item Designing a ``smart'' suitcase that tracks itself, detects mishandling, and weighs itself; interfacing with a smartphone.
-        \item Software lead for the team.
-        \item Coding in C++ and Java, using an Arduino and creating an app on Android.
-        \end{itemize}
-\end{resume}
+{\large\bf FOURTH YEAR DESIGN PROJECT}
+\begin{itemize}
+\item Designing a ``smart'' suitcase that tracks itself, detects mishandling, and weighs itself; interfacing with a smartphone.
+\item Software lead for the team.
+\item Coding in C++ and Java, using an Arduino and creating an app on Android.
+\end{itemize}
+
 \end{document}
