get rid of page number

--- a/resume.tex
+++ b/resume.tex
@@ -8,6 +8,8 @@
 %\usepackage{newcent}   % uses new century schoolbook postscript font
 %\setlength{\textwidth}{5.1in} % set width of text portion
 
+\pagestyle{empty}
+
 \begin{document}
 
 {\Huge\bf Stephen Kraemer} \hfill
