fixed the goddamn margins

--- a/resume.tex
+++ b/resume.tex
@@ -4,10 +4,11 @@
 
 \usepackage[colorlinks=true, urlcolor=blue]{hyperref}
 \usepackage{grffile}
+\usepackage{geometry}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font
 %\setlength{\textwidth}{5.1in} % set width of text portion
-
+\newgeometry{left=20mm,right=20mm,top=20mm, bottom=20mm}
 \pagestyle{empty}
 
 \begin{document}
