rephrase points, and change up headings/subheadings

--- a/resume.tex
+++ b/resume.tex
@@ -25,7 +25,8 @@
 \vskip 2pt
 \hrule
 
-{\large\bf SKILLS SUMMARY} \\
+{\large\bf SKILLS SUMMARY}
+
 %minipages = magic to make side-by-side columns
 \begin{minipage}{0.35\textwidth}
   \includegraphics{programming_languages.eps}
@@ -38,39 +39,44 @@
   \end{itemize}
 \end{minipage}
 
+%horizontal line
+\vskip 2pt
+\hrule
+{\large\bf WORK EXPERIENCE}
 
-{\large\bf WORK EXPERIENCE} \\
-{\bf Software Developer} \hfill Apr-Aug 2013 \\
-{\sl Oracle, Endeca Server Team, Boston, MA}
+{\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
+{\sl Software Developer}
 \begin{itemize}
-  \item Worked on performance and scaling team for an analytical database.
-  \item Personal projects were cache improvements, and job cancellation.
-  \item Found and fixed a bug in cache eviction algorithm; increasing query performance by up to 10\%.
+  \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
   \item Worked in performance-sensitive code, such as the main thread scheduler.
 \end{itemize}
 
-{\bf Software Developer} \hfill Aug-Dec 2012 \\
-{\sl Autodesk, Alias Team, Toronto, ON}
+{\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
+{\sl Software Developer}
 \begin{itemize}
   \item Completely redesigned the printing workflow.
   \item Fixed bugs and added features in newly added modelling tools.
 \end{itemize}
 
-{\bf Design Engineer} \hfill Jan-Apr 2012 \\
-{\sl Avvasi Inc, Packet Processing Team, Waterloo, ON}
+{\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
+{\sl Software Developer}
 \begin{itemize}
-  \item Worked on porting Internet Protocol parsers from an older product to a newer one.
+  \item Ported Internet Protocol parsers from an older product to a newer one.
   \item Gained knowledge of RTSP, RTMP, and HTTP protocols.
 \end{itemize}
 
-{\large\bf EDUCATION} \\
-{\bf Candidate for Bachelor of Applied Science} \hfill University of Waterloo, ON \\
-Mechatronics Engineering \hfill Sept 2009 - Apr 2014
+%horizontal line
+\vskip 2pt
+\hrule
+{\large\bf EDUCATION}
 
-{\large\bf FOURTH YEAR DESIGN PROJECT}
+{\bf Candidate for Bachelor of Applied Science} \hfill Sept 2009 - Apr 2014 \\
+Mechatronics Engineering \hfill University of Waterloo, ON
+
+{\bf Fourth Year Design Project} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
-  \item Designing a ``smart'' suitcase that tracks itself, detects mishandling, and weighs itself; interfacing with a smartphone.
-  \item Software lead for the team.
+  \item Designing a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
+  \item Software lead in a team of four.
   \item Coding in C++ and Java, using an Arduino and creating an app on Android.
 \end{itemize}
 
