fixed up work experience stuff

--- a/resume.tex
+++ b/resume.tex
@@ -54,15 +54,13 @@
 {\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Completely redesigned the printing workflow.
-  \item Fixed bugs and added features in newly added modelling tools.
+  \item Completely redesigned the printing workflow, integrating Qt into a product that did not previously use it.
 \end{itemize}
 
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Ported Internet Protocol parsers from an older product to a newer one.
-  \item Gained knowledge of RTSP, RTMP, and HTTP protocols.
+  \item Ported RTMP and RTSP parsers from an older product to a newer one.
 \end{itemize}
 
 %horizontal line
