added interests section

--- a/resume.tex
+++ b/resume.tex
@@ -78,4 +78,14 @@ Mechatronics Engineering \hfill University of Waterloo, ON
   \item Coding in C++ and Java, using an Arduino and creating an app on Android.
 \end{itemize}
 
+%horizontal line
+\vskip 2pt
+\hrule
+{\large\bf INTERESTS}
+\begin{itemize}
+  \item Heavy metal music
+  \item Video Games: Minecraft, Pokemon, Zelda
+  \item University of Waterloo Engineering Society member
+\end{itemize}
+
 \end{document}
