--- a/resume.tex
+++ b/resume.tex
@@ -25,19 +25,14 @@
 \vskip 2pt
 \hrule
 
-{\large\bf SKILLS SUMMARY}
+{\large\bf SUMMARY OF QUALIFICATIONS}
 
-%minipages = magic to make side-by-side columns
-\begin{minipage}{0.35\textwidth}
-  \includegraphics{programming_languages.eps}
-\end{minipage}
-\begin{minipage}{0.65\textwidth}
-  \begin{itemize}
-    \item Expert GNU/Linux user
-    \item Skilled in multi-threaded programming
-    \item Version Control: git, svn, perforce
-  \end{itemize}
-\end{minipage}
+\begin{itemize}
+  \item Experience working as a first year teaching assistant.
+  \item Programming Languages: C/C++, python, RobotC, Java, C#, Matlab.
+  \item Experience on embedded systems: Arduino, Lego Mindstorm.
+  \item Expert GNU/Linux User.
+\end{itemize}
 
 %horizontal line
 \vskip 2pt
@@ -68,7 +63,7 @@
 \hrule
 {\large\bf EDUCATION}
 
-{\bf Candidate for Bachelor of Applied Science} \hfill Sept 2009 - Apr 2014 \\
+{\bf Candidate for Bachelor of Applied Science} \hfill 2009 - 2014 (Expected) \\
 Mechatronics Engineering \hfill University of Waterloo, ON
 
 {\bf Fourth Year Design Project} \hfill Sept 2013 - Apr 2014
