--- a/resume.tex
+++ b/resume.tex
@@ -5,12 +5,16 @@
 \usepackage[colorlinks=true, urlcolor=blue]{hyperref}
 \usepackage{grffile}
 \usepackage{geometry}
+\usepackage{enumitem}
 
 %margins
 \newgeometry{left=20mm,right=20mm,top=20mm, bottom=20mm}
 
 %get rid of headers/footers (i.e. no page numbers)
 \pagestyle{empty}
+
+%Get rid of space before beginning of list
+\setlist{nolistsep}
 
 \begin{document}
 
@@ -28,10 +32,10 @@
 {\large\bf SUMMARY OF QUALIFICATIONS}
 
 \begin{itemize}
-  \item Experience working as a first year teaching assistant.
-  \item Programming Languages: C/C++, python, RobotC, Java, C#, Matlab.
-  \item Experience on embedded systems: Arduino, Lego Mindstorm.
-  \item Expert GNU/Linux User.
+  \item Expert C/C++ programmer, familiar with python, RobotC, Java, C\#, and Matlab.
+  \item Embedded systems: Arduino, Lego Mindstorms, Raspberry Pi.
+  \item Proficient GNU/Linux User.
+  \item Experience using standard office software as well as LaTeX.
 \end{itemize}
 
 %horizontal line
@@ -42,8 +46,8 @@
 {\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
 {\sl Software Developer}
 \begin{itemize}
+  \item Worked on performance and scaling team, coding in C++.
   \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
-  \item Worked in performance-sensitive code, such as the main thread scheduler.
 \end{itemize}
 
 {\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
@@ -55,7 +59,20 @@
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Ported RTMP and RTSP parsers from an older product to a newer one.
+  \item Ported RTMP and RTSP parsers from an older product to a newer one using C++.
+\end{itemize}
+
+{\bf Netkeepers} {\sl Markham, ON} \hfill May-Aug 2011 \\
+{\sl Support Technician}
+\begin{itemize}
+  \item Assisted customers remotely to troubleshoot computer-related issues.
+\end{itemize}
+
+{\bf University of Waterloo} {\sl Waterloo, ON} \hfill Jan-Apr, Sept-Dec 2010 \\
+{\sl Teaching Assistant and Lab Developer (GENE 121)}
+\begin{itemize}
+  \item Helped create labs using LEGO NXT and Arduino robots newly added to the course.
+  \item Ran extra-help sessions before final exams; created a practice final for students.
 \end{itemize}
 
 %horizontal line
@@ -66,7 +83,7 @@
 {\bf Candidate for Bachelor of Applied Science} \hfill 2009 - 2014 (Expected) \\
 Mechatronics Engineering \hfill University of Waterloo, ON
 
-{\bf Fourth Year Design Project} \hfill Sept 2013 - Apr 2014
+{\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
   \item Designing a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
   \item Software lead in a team of four.
@@ -78,9 +95,11 @@ Mechatronics Engineering \hfill University of Waterloo, ON
 \hrule
 {\large\bf INTERESTS}
 \begin{itemize}
-  \item Heavy metal music
-  \item Video Games: Minecraft, Pokemon, Zelda
-  \item University of Waterloo Engineering Society member
+  \item Member of University of Waterloo Engineering Society
+  \begin{itemize}
+    \item Volunteered at resume critiques for first year students.
+    \item Volunteered as an orientation week leader.
+  \end{itemize}
 \end{itemize}
 
 \end{document}
