Made work experience section a bit more detailed

--- a/resume.tex
+++ b/resume.tex
@@ -46,19 +46,21 @@
 {\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Worked on performance and scaling team, coding in C++.
+  \item Worked on performance and scaling team of an analytical database, coding in C++.
   \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
 \end{itemize}
 
 {\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
 {\sl Software Developer}
 \begin{itemize}
+  \item Developed software for a 3D modelling program.
   \item Completely redesigned the printing workflow, integrating Qt into a product that did not previously use it.
 \end{itemize}
 
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
+  \item Worked on product to analyze and improve video streaming over a large-scale network.
   \item Ported RTMP and RTSP parsers from an older product to a newer one using C++.
 \end{itemize}
 
