--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 {\sl Software Developer}
 \begin{itemize}
   \item Developed software for a 3D modelling program.
-  \item Completely redesigned the printing workflow, integrating Qt into a product that did not previously use it.
+  \item Completely redesigned the printing work-flow, integrating Qt into a product that did not previously use it.
 \end{itemize}
 
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
@@ -87,7 +87,7 @@ Mechatronics Engineering \hfill University of Waterloo, ON
 
 {\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
-  \item Designing a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
+  \item Designing a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smart-phone.
   \item Software lead in a team of four.
   \item Coding in C++ and Java, using an Arduino and creating an app on Android.
 \end{itemize}
