--- a/coverletter.tex
+++ b/coverletter.tex
@@ -7,7 +7,7 @@ I am submitting an application for the Engineering Instructional Support Tutor p
 
 I am a fourth year Mechatronics Engineering student, graduating this year. I have worked as a WEEF Teaching Assistant for the GENE 121 course twice on co-op terms, and found that to be very enjoyable. As a student at the University of Waterloo, I have participated in many activities to help first year students, including resume critiques run by the Engineering Society, and being an orientation week leader. \\
 
-I look forward to hearing from you about this oppurtunity. I can be reached via e-mail at sbkraeme@uwaterloo.ca, or by phone at 226-606-4052. \\
+I look forward to hearing from you about this opportunity. I can be reached via e-mail at sbkraeme@uwaterloo.ca, or by phone at 226-606-4052. \\
 
 Thank you for your time.
 \closing{Sincerely,}
