updated work experience and fydp sections

--- a/resume.tex
+++ b/resume.tex
@@ -47,20 +47,22 @@
 {\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
 {\sl Software Developer}
 \begin{itemize}
+  \item Worked on performance and scaling team of an analytical database, coding in C++.
   \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
-  \item Worked in performance-sensitive code, such as the main thread scheduler.
 \end{itemize}
 
 {\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Completely redesigned the printing workflow, integrating Qt into a product that did not previously use it.
+  \item Developed software for a 3D modelling program.
+  \item Completely redesigned the printing work-flow, integrating Qt into a product that did not previously use it.
 \end{itemize}
 
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Ported RTMP and RTSP parsers from an older product to a newer one.
+  \item Worked on product to analyze and improve video streaming over a large-scale network.
+  \item Ported RTMP and RTSP parsers from an older product to a newer one using C++.
 \end{itemize}
 
 %horizontal line
@@ -71,11 +73,10 @@
 {\bf Candidate for Bachelor of Applied Science} \hfill Sept 2009 - Apr 2014 \\
 Mechatronics Engineering \hfill University of Waterloo, ON
 
-{\bf Fourth Year Design Project} \hfill Sept 2013 - Apr 2014
+{\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
-  \item Designing a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
-  \item Software lead in a team of four.
-  \item Coding in C++ and Java, using an Arduino and creating an app on Android.
+  \item Designed a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
+  \item Software lead in a team of four, coded in C++, Java, PHP, using an Arduino and creating an app on Android.
 \end{itemize}
 
 %horizontal line
