added network stack to skills summary

--- a/resume.tex
+++ b/resume.tex
@@ -35,6 +35,7 @@
   \begin{itemize}
     \item Expert GNU/Linux user
     \item Skilled in multi-threaded programming
+    \item Experience working in protocols throughout the network stack
     \item Version Control: git, svn, perforce
   \end{itemize}
 \end{minipage}
