updated skills summary section

--- a/resume.tex
+++ b/resume.tex
@@ -25,7 +25,17 @@
 \vskip 2pt
 \hrule
 
-{\large\bf SKILLS SUMMARY}
+{\large\bf SUMMARY OF QUALIFICATIONS}
+\begin{itemize}
+  \item Proficient in programming in a multi-threaded environment
+  \item Familiar with protocols throughout the network stack
+  \item Attentive to detail in both writing software and in integrating with existing code
+  \item Experience working in performance sensitive code
+\end{itemize}
+
+\vskip 2pt
+
+{\bf Programming Languages and Tools}
 
 %minipages = magic to make side-by-side columns
 \begin{minipage}{0.35\textwidth}
@@ -33,10 +43,10 @@
 \end{minipage}
 \begin{minipage}{0.65\textwidth}
   \begin{itemize}
-    \item Expert GNU/Linux user
-    \item Skilled in multi-threaded programming
-    \item Experience working in protocols throughout the network stack
+    \item Operating Systems: Linux (day-to-day Ubuntu and Arch Linux user)
     \item Version Control: git, svn, perforce
+    \item Embedded Systems: Arduino, Raspberry Pi
+    \item Other Tools: gdb, valgrind, make, LaTeX, emacs
   \end{itemize}
 \end{minipage}
 
