--- a/resume.tex
+++ b/resume.tex
@@ -46,7 +46,7 @@
     \item Operating Systems: Linux (day-to-day Ubuntu and Arch Linux user)
     \item Version Control: git, svn, perforce
     \item Embedded Systems: Arduino, Raspberry Pi
-    \item Other Tools: gdb, valgrind, make, LaTeX, emacs
+    \item Other Tools: gdb, valgrind, make, LaTeX, emacs, wireshark
   \end{itemize}
 \end{minipage}
 
@@ -58,9 +58,10 @@
 {\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
 {\sl Software Developer}
 \begin{itemize}
-  \item Worked on performance and scaling team of an analytical database, coding in C++.
+  \item Worked on performance and scaling team of an analytical database.
   \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
 \end{itemize}
+{\bf Technical Environment:} C++11, python, Linux, Windows, multi-threaded programming, make, gdb, valgrind, svn, git
 
 {\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
 {\sl Software Developer}
@@ -68,17 +69,21 @@
   \item Developed software for a 3D modelling program.
   \item Completely redesigned the printing work-flow, integrating Qt into a product that did not previously use it.
 \end{itemize}
+{\bf Technical Environment:} C++, Objective-C, Windows, OS X, multi-threaded programming, jam (Just Another Make), gdb, perforce, Qt
 
 {\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
   \item Worked on product to analyze and improve video streaming over a large-scale network.
-  \item Ported RTMP and RTSP parsers from an older product to a newer one using C++.
+  \item Ported RTMP and RTSP parsers from an older product to a newer one.
 \end{itemize}
+{\bf Technical Environment:} C++11, Linux, multi-threaded programming, network programming, gcc, make, gdb, valgrind, svn, ssh, wireshark
 
 %horizontal line
 \vskip 2pt
 \hrule
+
+\newpage
 {\large\bf EDUCATION}
 
 {\bf Candidate for Bachelor of Applied Science} \hfill Sept 2009 - Apr 2014 \\
@@ -87,8 +92,9 @@ Mechatronics Engineering \hfill University of Waterloo, ON
 {\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
   \item Designed a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
-  \item Software lead in a team of four, coded in C++, Java, PHP, using an Arduino and creating an app on Android.
+  \item Software lead in a team of four.
 \end{itemize}
+{\bf Technical Environment:} C++, PHP, Java, Arduino, Android, Raspberry Pi, network programming, wireshark
 
 %horizontal line
 \vskip 2pt
