--- a/resume.tex
+++ b/resume.tex
@@ -55,29 +55,32 @@
 \hrule
 {\large\bf WORK EXPERIENCE}
 
-{\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
+{\large\bf Oracle,} Endeca Server Team, {\sl Boston, MA} \hfill Apr-Aug 2013 \\
 {\sl Software Developer}
 \begin{itemize}
   \item Worked on performance and scaling team of an analytical database.
   \item Increased query performance by up to 10\% by finding and fixing a bug in cache eviction algorithm.
 \end{itemize}
-{\bf Technical Environment:} C++11, python, Linux, Windows, multi-threaded programming, make, gdb, valgrind, svn, git
+\emph{Use of Time:} New Feature Development (50\%), Bug Fixes (5\%), Verification Testing (15\%), \\* Performance Testing (20\%), Other Testing (10\%) \\
+\emph{Technical Environment:} C++11, python, Linux, multi-threaded programming, make, gdb, valgrind, svn, git
 
-{\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
+{\large\bf Autodesk,} Alias Team, {\sl Toronto, ON} \hfill Aug-Dec 2012 \\
 {\sl Software Developer}
 \begin{itemize}
   \item Developed software for a 3D modelling program.
   \item Completely redesigned the printing work-flow, integrating Qt into a product that did not previously use it.
 \end{itemize}
-{\bf Technical Environment:} C++, Objective-C, Windows, OS X, multi-threaded programming, jam (Just Another Make), gdb, perforce, Qt
+\emph{Use of Time:} New Feature Development (50\%), Bug Fixes (25\%), Verification Testing (25\%) \\
+\emph{Technical Environment:} C++, Objective-C, Windows, OS X, gdb, perforce, Qt, multi-threaded programming
 
-{\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
+{\large\bf Avvasi Inc,} Packet Processing Team, {\sl Waterloo, ON} \hfill Jan-Apr 2012 \\
 {\sl Software Developer}
 \begin{itemize}
   \item Worked on product to analyze and improve video streaming over a large-scale network.
   \item Ported RTMP and RTSP parsers from an older product to a newer one.
 \end{itemize}
-{\bf Technical Environment:} C++11, Linux, multi-threaded programming, network programming, gcc, make, gdb, valgrind, svn, ssh, wireshark
+\emph{Use of Time:} New Feature Development (65\%), Bug Fixes (10\%), Verification Testing (5\%), Unit Testing (20\%) \\
+\emph{Technical Environment:} C++11, Linux, multi-threaded programming, network programming, gcc, make, gdb, svn, valgrind, wireshark
 
 %horizontal line
 \vskip 2pt
@@ -89,12 +92,12 @@
 {\bf Candidate for Bachelor of Applied Science} \hfill Sept 2009 - Apr 2014 \\
 Mechatronics Engineering \hfill University of Waterloo, ON
 
-{\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
+{\large\bf Fourth Year Design Project} - \href{http://www.casesensitive.ca}{www.casesensitive.ca} \hfill Sept 2013 - Apr 2014
 \begin{itemize}
   \item Designed a ``smart'' suitcase that tracks its position, detects mishandling, and weighs itself; reporting this information to a smartphone.
   \item Software lead in a team of four.
 \end{itemize}
-{\bf Technical Environment:} C++, PHP, Java, Arduino, Android, Raspberry Pi, network programming, wireshark
+\emph{Technical Environment:} C++, PHP, Java, Arduino, Android, Raspberry Pi, network programming, wireshark
 
 %horizontal line
 \vskip 2pt
